2009-08-05 Alvaro Vega Garcia  <avega@tid.es>

	* TIDorbC version 6.3.2 released.
	
	Fix bug [#1050] Invalid memory access in DynValueImpl::_write
	Fix bug [#1034] Object::_set_policy_overrides doesn't leave current 
	object reference without changes
	
2009-07-02 Alvaro Vega Garcia  <avega@tid.es>

	* TIDorbC version 6.3.1 released.
	
	Fix bug [#1026] Unable to retrieve the factory of a custom compressor 
	previously registered
	Task [#639] Improve access to ORB configuration 
	Aligned with GIOP Compression (FTF Beta 2, May 2009): changes in the
	way of obtain 'min_ratio' value
	Fix bug [#982] Memory leaks using ZIOPCompressorLevelIdListPolicy
	Fix bug [#781] MARSHAL with Fixed into a Structured type
	Fix bug [#960] Incorrect internal representation of some Fixed values 
	(ej. -123.234)
	Fix bug [#782] CORE: infinite loop in BigInt management

2009-04-08 Alvaro Vega Garcia  <avega@tid.es>

	* TIDorbC version 6.3.0 released.
	
	Fix bug [#945] Core dump at POAImpl::etherealizeAllObject with 
	ServantActivator
	Feature [#342] GIOP Compression with a Zlib compressor
	Fix bug [#771] Impossible recreate RootPOA after destroy it
	Fix bug [#758] Object::_non_exists() over a reference raises 
	OBJECT_NOT_EXIST after deactivate a LocalObject
	Fix bug [#756] _is_equivalent between references obtained from the same
	object doesn't work
	Fix bug [#937] Core dump calling method set_as_string of DynEnum 
	created from an alias TypeCode
	Feature [#841] Set TAG_ORB_TYPE requested to OMG

2008-10-03 Alvaro Vega Garcia  <avega@tid.es>

	* TIDorbC version 6.2.21 released.
	
	Fix bug [#791] DynValue not initialized correctly when is created from
	a Typecode.
	Fix bug [#775] MARSHAL dispatching a LocateRequest
	
2008-09-15 Alvaro Vega Garcia  <avega@tid.es>

	* TIDorbC version 6.2.20 released.
	
	Fix bug [#773] NVList::add_value doesn't set properly internal 
	typecode into value
	Fix bug [#757] register_value_factory doesn't return previous value