@@ -1,3 +1,3 @@
-This file lists some known bugs in TIDorbC++ 6.3.2 release which needs to
+This file lists some known bugs in TIDorbC++ 6.3.3 release which needs to
 be solved in later releases. Please report any new problem with TIDorbC++
 to tidorbc-bugs@lists.morfeo-project.org mailing list.
