@@ -1,5 +1,5 @@
 dnl Autoconf and automake initialization
-AC_INIT([TIDorbC], [6.3.2], [tidorbc-bugs@lists.morfeo-project.org])
+AC_INIT([TIDorbC], [6.3.3], [tidorbc-bugs@lists.morfeo-project.org])
 AC_CONFIG_SRCDIR([source/TIDorbC/orb/TIDorb/core/TIDORB.C])
 AM_INIT_AUTOMAKE([-Wall foreign 1.9 tar-ustar])
 
